--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,8 @@
                  <div class="col-lg-10 mx-auto mb-4">
                     <div class="section-title text-center ">
                         </br></br>
-                        <h3 class="top-c-sep">Listado de especialistas y comercios</h3>
-                        <p>Sentir Humano busca por medio de su programa que las personas puedan acceder a consultas con todo tipo de especialistas en la salud con tarifas preferenciales, que van desde el 20 hasta el 70%.</p>
+                        <h3 class="top-c-sep">Lista de especialistas y comercios</h3>
+                        <p>Programa para acceder a especialistas en la salud con tarifas preferenciales, que van desde el 20% hasta el 70%.</p>
                     </div>
                 </div>
             </div>
@@ -29,9 +29,10 @@
                                     <div class="select-container">
                                         <select class="custom-select">
                                             <option selected="">Ubicacion</option>
-                                            <option value="1">Jaipur</option>
-                                            <option value="2">Pune</option>
-                                            <option value="3">Bangalore</option>
+                                            <option value="1">Armenia</option>
+                                            <option value="2">Cartago</option>
+                                            <option value="3">Manizales</option>
+                                            <option value="4">Pereira</option>
                                         </select>
                                     </div>
                                 </div>
@@ -39,9 +40,10 @@
                                     <div class="select-container">
                                         <select class="custom-select">
                                             <option selected="">Especialidad</option>
-                                            <option value="1">Ui designer</option>
-                                            <option value="2">JS developer</option>
-                                            <option value="3">Web developer</option>
+                                            <option value="1">Alergologia</option>
+                                            <option value="2">Ambulancia</option>
+                                            <option value="3">Audiometria</option>
+                                            <option value="4">Cardiologia</option>
                                         </select>
                                     </div>
                                 </div>
@@ -64,14 +66,15 @@
                                     <div class="job-content">
                                         <h5 class="text-center text-md-left">{{ supli.specialty }}</h5>
                                         <ul class="d-md-flex flex-wrap text-capitalize ff-open-sans">
+                                            <br>
                                             <li class="mr-md-4">
-                                                <i class="zmdi zmdi-pin mr-2"></i> {{ supli.address }}
+                                                <i class="zmdi zmdi-hospital mr-2"></i> {{supli.first_name}}
+                                            </li>
+                                            <li class="mr-md-4">
+                                                <i class="zmdi zmdi-city mr-2"></i> {{ supli.address }}
                                             </li>
                                             <li class="mr-md-4">
                                                 <i class="zmdi zmdi-money mr-2"></i> 25.000
-                                            </li>
-                                            <li class="mr-md-4">
-                                                <i class="zmdi zmdi-time mr-2"></i> Lunes - Viernes
                                             </li>
                                         </ul>
                                     </div>
