--- a/templates/home.html
+++ b/templates/home.html
@@ -9,16 +9,17 @@
             <div class="row">
                  <div class="col-lg-10 mx-auto mb-4">
                     <div class="section-title text-center ">
-                        </br></br>
+                        </br></br><br>
                         <h3 class="top-c-sep">Lista de especialistas y comercios</h3>
                         <p>Programa para acceder a especialistas en la salud con tarifas preferenciales, que van desde el 20% hasta el 70%.</p>
                     </div>
                 </div>
             </div>
-
+            
             <div class="row">
                 <div class="col-lg-10 mx-auto">
                     <div class="career-search mb-60">
+                        <form action="#" class="career-form mb-60">
                             <div class="row">
                                 <div class="col-md-6 col-lg-3 my-3">
                                     <div class="input-group position-relative">
@@ -53,7 +54,7 @@
                                     </button>
                                 </div>
                             </div>
-
+                        </form>   
                         <div class="filter-result">
                             <p class="mb-30 ff-montserrat">Descuentos : 89</p>
                             {% for supli in suppliers %}
@@ -61,7 +62,7 @@
                             <div class="job-box d-md-flex align-items-center justify-content-between mb-30">
                                 <div class="job-left my-4 d-md-flex align-items-center flex-wrap">
                                     <div class="img-holder mr-md-4 mb-md-0 mb-4 mx-auto mx-md-0 d-md-none d-lg-flex">
-                                        FD
+                                        {{supli.discount}}%
                                     </div>
                                     <div class="job-content">
                                         <h5 class="text-center text-md-left">{{ supli.specialty }}</h5>
@@ -80,7 +81,10 @@
                                     </div>
                                 </div>
                                 <div class="job-right my-4 flex-shrink-0">
-                                    <a href="#" class="btn d-block w-100 d-sm-inline-block btn-light">Solicitar Cita</a>
+                                    <a href="https://api.whatsapp.com/send?phone=+573178935849&text=Quiero%20una%20cita%20con%20{{ supli.specialty }} - %20{{supli.first_name}}%20{{supli.phone}}" class="btn d-block w-100 d-sm-inline-block btn-outline-success">Whatsapp Cita</a>
+                                </div>
+                                <div class="job-right my-4 flex-shrink-0">
+                                    <a href="tel:+573178935849" class="btn d-block w-100 d-sm-inline-block btn-outline-info">Llamar Cita</a>
                                 </div>
                             </div>
                             <strong></strong>
