Search field home ith city & speciality

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,23 +28,23 @@
                                 </div>
                                 <div class="col-md-6 col-lg-3 my-3">
                                     <div class="select-container">
-                                        <select class="custom-select" name="" value="">
-                                            <option selected="">Ubicacion</option>
-                                            <option value="1">Armenia</option>
-                                            <option value="2">Cartago</option>
-                                            <option value="3">Manizales</option>
-                                            <option value="4">Pereira</option>
+                                        <select class="custom-select" name="city" value="ciudad" >
+                                            <option value="" disabled selected>Ubicacion</option>
+                                            <option value="Armenia">Armenia</option>
+                                            <option value="Cartago">Cartago</option>
+                                            <option value="Manizales">Manizales</option>
+                                            <option value="Pereira">Pereira</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-3 my-3">
                                     <div class="select-container">
-                                        <select class="custom-select">
-                                            <option selected="">Especialidad</option>
-                                            <option value="1">Alergologia</option>
-                                            <option value="2">Ambulancia</option>
-                                            <option value="3">Audiometria</option>
-                                            <option value="4">Cardiologia</option>
+                                        <select class="custom-select" name="specialty" value="especialidad">
+                                            <option value="" disabled selected>Especialidad</option>
+                                            <option value="Alergologia">Alergologia</option>
+                                            <option value="Ambulancia">Ambulancia</option>
+                                            <option value="Audiometria">Audiometria</option>
+                                            <option value="Cardiologia">Cardiologia</option>
                                         </select>
                                     </div>
                                 </div>
