--- a/static/front/css/front.css
+++ b/static/front/css/front.css
@@ -4,7 +4,7 @@ body{
 
 /* ===== Career ===== */
 .career-form {
-  background-color: #4e63d7;
+  background-color: #6366f1;
   border-radius: 5px;
   padding: 16px;
 }
