--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
                     <br><br><br>
                     <h3><span>¿Quiénes</span> somos?</h3>
                     <br>
-                    <p>Democratizamos el acceso al servicio de salud especializado y nuestra misión es abordar un problema social de acceso a la salud equitativa.</p>
+                    <p>Una plataforma que democratiza el acceso al servicio de salud especializado y nuestra misión es abordar un problema social de acceso a la salud equitativa.</p>
                     <br>
                     <div class="line"></div>
                 </div>
