--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <img src="{% static 'front/img/logo.svg' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-      <a class="navbar-brand" href="#">&nbsp;Sentir Humano</a>
+      <img src="{% static 'front/img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+      <a class="navbar-brand" href="#">&nbsp;&nbsp;Sentir Humano</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
