--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <!-- home.html -->
 {% extends "base.html" %}
-
+{% load static %}
 {% block title %}Homepage{% endblock %}
 
 {% block main %}
@@ -9,7 +9,9 @@
             <div class="row">
                  <div class="col-lg-10 mx-auto mb-4">
                     <div class="section-title text-center ">
-                        </br></br><br><br>
+                        </br></br><br>
+                        <img src="{% static 'front/img/logo_soy.png' %}" width="297" height="150" class="d-inline-block align-top" alt="">
+                        <br><br>
                         <h3 class="top-c-sep">Lista de especialistas y comercios</h3>
                         <p>Programa para acceder a especialistas en la salud con tarifas preferenciales, que van desde el 20% hasta el 70%.</p>
                     </div>
