--- a/templates/admin/invoice.html
+++ b/templates/admin/invoice.html
@@ -34,9 +34,11 @@
     .text-center{
         text-align: center;
     }
+    
 </style>
 <body>
-    <img src="{% static 'front/img/logo.png' %}" width="30" height="30" class="head" alt="">
+    
+    <img src="{% static 'front/img/logo_soy.png' %}" width="220" height="88" class="head" alt="">
     <p class="head">
         {{ comp.name|upper }}<br>
         {{ comp.ruc }}<br>
