Add PDF function debug 4.1

--- a/templates/admin/invoice.html
+++ b/templates/admin/invoice.html
@@ -75,11 +75,11 @@
         </tr>
         <tr style="padding-top: 0px;">
             <td colspan="4"><b>ABONO</b></td>
-            <td style="text-align: right">${{ invoice.balance }}</td>
+            <td style="text-align: right">${{ invoice.full_payment }}</td>
         </tr>
         <tr style="padding-top: 0px;">
-            <td colspan="4"><b>TOTAL A PAGAR</b></td>
-            <td style="text-align: right">${{ invoice.full_payment }}</td>
+            <td colspan="4"><b>SALDO</b></td>
+            <td style="text-align: right">${{ invoice.balance }}</td>
         </tr>
         </tbody>
     </table>
