--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -28,61 +28,22 @@
         padding-bottom: 0;
     }
 
-    #invoice tbody td {
-        border-collapse: separate;
-        border-spacing: 0;
-        margin-bottom: 10px;
-        font-size: 13px;
-        padding: 3px;
-        border-radius: 10px;
-    }
+   
     .text-center{
         text-align: center;
         font-size: 18px;
     }
+    .td_front{
+        background-size: 500px 300px;
+        background-repeat: no-repeat;
+        background-position: top;
+        background-attachment: fixed;
+        font-size: 13px;
+        padding-left: 10px;
+    }
     
 </style>
 <body>
-
-    
-    <table id="invoice">
-        <thead>
-        <tr>
-            <th style="width: 0%;"></th>
-            <th style="width: 45%;"></th>
-            <th style="width: 45%;"></th>
-            <th style="width: 0%;"></th>
-           
-            
-        </tr>
-        </thead>
-        <tbody>
-            <td></td>
-            <td style="border-top-left-radius: 10px; background-color:rgb(248, 189, 87); border: 1px solid rgb(149, 144, 121);  text-align: center;">
-                <p><img src="{% static 'front/img/logo_soy.png' %}" width="220" height="108" class="head" alt=""></p>
-                <p>
-                    {{ comp.name|upper }}<br>
-                    {{ comp.ruc }}<br>
-                    {{ comp.address|upper }}
-                </p>
-            </td>
-       
-        <td style="padding-left: 40px; background-color:bisque; border: 1px solid rgb(149, 144, 121);">
-            <p>
-                <b>ID:</b> {{ customer.id }}<br>
-                <b>Vigencia:</b> {{ customer.endsAt }}<br>
-                <b>ASOCIADO:</b> {{ customer.first_name|upper }}  {{ customer.last_name|upper }}<br>
-                <b>C.C:</b> {{ customer.person_id }}<br>
-            </p>
-        </td>
-        <td></td>
-        
-        </tbody>
-    </table>
-    <tr><td><br><p>Este carnet de servicios lo identifica como afiliado a la plataforma Sentir Humanno.
-        Preséntela con su documento de identidad para acceder a los servicios que
-        ofrecemos.
-        Esta credencial es personal e intransferible. Información sujeta a validación de
-        afiliación y aportes</p></td></tr>
+<p>Prueba</p>
 </body>
 </html>
