--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -1,49 +1,53 @@
 <!-- base.html -->
 {% load static %}
-<!DOCTYPE html>
-<html>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<style>
-    .img-invoice {
-        width: 50px;
-        text-align: center;
-        margin: 0 auto;
-       
-    }
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    .head {
-        text-align: center;
-        text-transform: uppercase;
-        
-    }
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    #invoice thead tr th {
-        text-align: left;
-        
-        padding-top: 10px;
-    }
+    <title>Cernet Sentir Humano</title>
 
-    #invoice thead tr {
-        
-        padding-bottom: 0;
-    }
+    <style>
+        .table td {
+            font-size: 13px;
+        }
+        #person_id {
+          text-align: right;
+          padding-right: 30px;
+        }
+    </style>
+  </head>
+  <body>
+    <table id="credential">
+        <thead>
+            <tr>
+                <th style="width: 50%;"></th>
+                <th style="width: 50%;"></th>
+            </tr>
+        </thead>
+        <tbody >
+            <tr>
+                <td>
+                    <p id="person_id">{{ customer.person_id }}</p>
+                    <br>{{ customer.first_name|upper }}{{ customer.last_name|upper }}</br>
+                    <br>{{ customer.person_id }}</br>
+                    <br>{{ customer.endsAt }}</br>
+                </td>
+                <td><img src="{% static 'front/img/credential.png' %}" width="440" height="325" class="head" alt="">  </td>
+            </tr>
+        </tbody>
+     </table>
 
-   
-    .text-center{
-        text-align: center;
-        font-size: 18px;
-    }
-    .td_front{
-        background-size: 500px 300px;
-        background-repeat: no-repeat;
-        background-position: top;
-        background-attachment: fixed;
-        font-size: 13px;
-        padding-left: 10px;
-    }
-    
-</style>
-<body>
-<p>Prueba</p>
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
+        
