Add PDF function 4.3

--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -23,26 +23,15 @@
     </style>
   </head>
   <body>
-    <table id="credential">
-        <thead>
-            <tr>
-                <th style="width: 50%;"></th>
-                <th style="width: 50%;"></th>
-            </tr>
-        </thead>
-        <tbody >
-            <tr>
-                <td>
+   
+        
                     <p id="person_id">{{ customer.person_id }}</p>
                     <br>{{ customer.first_name|upper }}{{ customer.last_name|upper }}</br>
                     <br>{{ customer.person_id }}</br>
                     <br>{{ customer.endsAt }}</br>
-                </td>
-                <td><img src="{% static 'front/img/credential.png' %}" width="440" height="325" class="head" alt="">  </td>
-            </tr>
-        </tbody>
-     </table>
-
+                
+              <img src="{% static 'front/img/credential.png' %}" width="440" height="325" class="head" alt=""> 
+            
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
