--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -23,10 +23,7 @@
     </style>
   </head>
   <body>
-   
-        
-              <img src="{% static 'front/img/credential.png' %}" width="440" height="325" class="head" alt=""> 
-            
+   <h1>Prueba</h1>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
