Add PDF function 4.4

--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -20,10 +20,19 @@
           text-align: right;
           padding-right: 30px;
         }
+        .head {
+            text-align: center;
+            text-transform: uppercase;
+        }
     </style>
   </head>
   <body>
    <h1>Prueba</h1>
+   <p class="head">
+        {{ comp.name|upper }}<br>
+        {{ comp.ruc }}<br>
+        {{ comp.address|upper }}
+    </p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
