--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -27,7 +27,8 @@
     </style>
   </head>
   <body>
-   <h1>Prueba</h1>
+    <img src="{% static 'front/img/logo_soy.png' %}" width="220" height="108" class="head" alt="">
+  
    <p class="head">
         {{ comp.name|upper }}<br>
         {{ comp.ruc }}<br>
