--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <img src="{% static 'front/img/logo_soy.png' %}" width="220" height="108" class="head" alt="">
+    <img src="/static/front/img/credential_front.png" width="220" height="108" class="head" alt="">
   
    <p class="head">
         {{ comp.name|upper }}<br>
