Add PDF function 4.9

--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -1,5 +1,5 @@
 <!-- base.html -->
-
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <img src="/static/front/img/credential_front.png" width="220" height="108" class="head" alt="">
+    <img src="{% static 'front/img/credential_front.png' %}" width="220" height="108" class="head" alt="">
   
    <p class="head">
         {{ comp.name|upper }}<br>
