Add PDF function 4.7

--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <img src="{% static 'front/img/logo.png' %}" width="479" height="325" class="head" alt="">
+    <img src="{% static 'front/img/credential_front.png' %}" width="479" height="325" class="head" alt="">
   
    <p class="head">
         {{ comp.name|upper }}<br>
