--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -1,44 +1,33 @@
+
 <!-- base.html -->
 {% load static %}
+
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
+    
+    <!-- Style front-->
+    <link rel="stylesheet" type="text/css" href="{% static 'front/css/front.css' %}" />
 
-    <title>Cernet Sentir Humano</title>
-
-    <style>
-        .table td {
-            font-size: 13px;
-        }
-        #person_id {
-          text-align: right;
-          padding-right: 30px;
-        }
-        .head {
-            text-align: center;
-            text-transform: uppercase;
-        }
-    </style>
+    <title>Sentir Humano</title>
   </head>
   <body>
-    <img src="{% static 'front/img/credential_front.png' %}" width="479" height="325" class="head" alt="">
-  
-   <p class="head">
-        {{ comp.name|upper }}<br>
-        {{ comp.ruc }}<br>
-        {{ comp.address|upper }}
-    </p>
+    <img src="{% static 'front/img/logo.png' %}" width="50" height="50" class="d-inline-block align-top" alt="">
+    
     <!-- Optional JavaScript -->
+    <script src="https://unpkg.com/htmx.org@1.7.0" integrity="sha384-EzBXYPt0/T6gxNp0nuPtLkmRpmDBbjg6WmCUZRLXBBwYYmwAUxzlSGej0ARHX0Bo" crossorigin="anonymous"></script>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
-        
+ 
