--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -13,21 +13,62 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
     
-    <!-- Style front-->
-    <link rel="stylesheet" type="text/css" href="{% static 'front/css/front.css' %}" />
-
+   
     <title>Sentir Humano</title>
+    <style>
+      @page  {
+        background-image: url('{%  static "front/img/credential_front.png" %}');
+         
+      } 
+      .test {
+        font-size: 13px;
+      }
+      .person_id{
+        text-align: right;
+        margin: 70px 50px 0px 205px;
+        padding-top: 45px;
+      }
+      .first_name{
+        margin: 70px 0px 20px 43px;
+      }
+      .creator{
+        margin: 0 0px 0px 45px;
+      }
+      .date{
+        margin: 20px 0px 0px 47px;
+      }
+      .afiliado{
+        font-size: 14;
+        padding-left: 80px;
+      }
+    </style>
   </head>
   <body>
-    <img src="{% static 'front/img/logo.png' %}" width="50" height="50" class="d-inline-block align-top" alt="">
     
-    <!-- Optional JavaScript -->
-    <script src="https://unpkg.com/htmx.org@1.7.0" integrity="sha384-EzBXYPt0/T6gxNp0nuPtLkmRpmDBbjg6WmCUZRLXBBwYYmwAUxzlSGej0ARHX0Bo" crossorigin="anonymous"></script>
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <table>
+       <thead>
+          <td class="test">
+            <p class="person_id">{{customer.person_id }}</p> 
+            <p class="first_name">{{ customer.first_name|upper }} {{ customer.last_name|upper }}</p>
+            <p class="creator">{{ customer.creator_by.username}}</p>
+            <p class="date">{{customer.endsAt }}</p>
+          </td>
+          <td style=" padding: 2px 0 0 0;">
+            <img src="{% static 'front/img/credential.png' %}" width="440" height="288"  alt="">
+          </td>
+       </thead>
+  </table>
+      </br></br></br>
+      <div style="margin: 30px;">
+        <h2>Afliados</h2>
+        <p class="adiliado">{{ customer.affiliate_one_customer.first_name|upper }} {{ customer.affiliate_one_customer.last_name|upper }}</p>
+        <p class="adiliado">{{ customer.affiliate_two_customer.first_name|upper }} {{ customer.affiliate_two_customer.last_name|upper }}</p>
+        <p class="adiliado">{{ customer.affiliate_three_customer.first_name|upper }} {{ customer.affiliate_three_customer.last_name|upper }}</p>
+        <p class="adiliado">{{ customer.affiliate_four_customer.first_name|upper }} {{ customer.affiliate_four_customer.last_name|upper }}</p>
+        <p class="adiliado">{{ customer.affiliate_five_customer.first_name|upper }} {{ customer.affiliate_five_customer.last_name|upper }}</p>
+        <p class="adiliado">{{ customer.affiliate_six_customer.first_name|upper }} {{ customer.affiliate_six_customer.last_name|upper }}</p>
+        <p class="adiliado">{{ customer.affiliate_seven_customer.first_name|upper }} {{ customer.affiliate_seven_customer.last_name|upper }}</p>
+      </div>
   </body>
 </html>
  
