--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -17,6 +17,10 @@
     <title>Sentir Humano</title>
     <style>
       @page  {
+        size: A4;
+        @frame content_frame {          /* Content Frame */
+          left: 0pt; width: 620pt; top: 0pt; height: 877pt;
+        }
         background-image: url('{%  static "front/img/credential_front.png" %}');
          
       } 
