Validation some fields

--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -33,17 +33,17 @@
         padding-top: 45px;
       }
       .first_name{
-        margin: 70px 0px 20px 43px;
+        margin: 70px 0px 20px 45px;
       }
       .creator{
         margin: 0 0px 0px 45px;
       }
       .date{
-        margin: 20px 0px 0px 47px;
+        margin: 20px 0px 0px 45px;
       }
       .afiliado{
         font-size: 14;
-        padding-left: 80px;
+        margin-left: 45px;
       }
     </style>
   </head>
@@ -58,13 +58,13 @@
             <p class="date">{{customer.endsAt }}</p>
           </td>
           <td style=" padding: 2px 0 0 0;">
-            <img src="{% static 'front/img/credential.png' %}" width="440" height="288"  alt="">
+            <img src="{% static 'front/img/credential.png' %}" width="440" height="289"  alt="">
           </td>
        </thead>
   </table>
       </br></br></br>
-      <div style="margin: 30px;">
-        <h2>Afliados</h2>
+      <div style="margin: 30px; background-color: rgb(253, 246, 235); padding: 10px;">
+        <h1 >Afliados</h1>
         <p class="adiliado">{{ customer.affiliate_one_customer.first_name|upper }} {{ customer.affiliate_one_customer.last_name|upper }}</p>
         <p class="adiliado">{{ customer.affiliate_two_customer.first_name|upper }} {{ customer.affiliate_two_customer.last_name|upper }}</p>
         <p class="adiliado">{{ customer.affiliate_three_customer.first_name|upper }} {{ customer.affiliate_three_customer.last_name|upper }}</p>
