Plans page, membership validadtion Fivicon home

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block title %}Nosotros{% endblock %}
 
 {% block about %}
@@ -10,7 +10,9 @@
             <div class="col-12 col-sm-8 col-lg-6">
                 <!-- Section Heading-->
                 <div class="section_heading text-center wow fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                    <br><br><br>
+                    <br><br>
+                    <img src="{% static 'front/img/front.png' %}" width="512" height="384" class="d-inline-block align-top" alt="">
+                    </br> </br>
                     <h3><span>¿Quiénes</span> somos?</h3>
                     <br>
                     <p>Una plataforma que democratiza el acceso al servicio de salud especializado y nuestra misión es abordar un problema social de acceso a la salud equitativa.</p>
