Fixed empty endsAt Customer 1.2

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
       <img src="{% static 'front/img/logo.png' %}" width="50" height="50" class="d-inline-block align-top" alt="">
-      <a class="navbar-brand" href="#">&nbsp;&nbsp;Sentir Humano</a>
+      <a class="navbar-brand" href="{% url 'home' %}">&nbsp;&nbsp;Sentir Humano</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
