--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -15,15 +15,9 @@
     
    
     <title>Sentir Humano</title>
-    <style>
-      @page  {
-        size: A4;
-        @frame content_frame {          /* Content Frame */
-          left: 0pt; width: 587pt; top: 0pt; height: 700pt;
-        }
-        background-image: url('{%  static "front/img/credential_front.png" %}');
-         
-      } 
+    <style type="text/css">
+      @page {size: a4 portrait; @frame header_frame {-pdf-frame-content: header_content; left: 50pt; width: 512pt; top: 50pt; height: 40pt;} @frame content_frame { left: 50pt; width: 512pt; top: 90pt; height: 632pt;} @frame footer_frame { -pdf-frame-content: footer_content; left: 50pt; width: 512pt; top: 772pt; height: 20pt;}}
+      
       .test {
         font-size: 13px;
       }
