--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -1,5 +1,3 @@
-
-<!-- base.html -->
 {% load static %}
 
 <!doctype html>
@@ -13,33 +11,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
     
+    <link rel="stylesheet" type="text/css" href="{% static 'front/css/credential.css' %}" />
+    <style type="text/css"> 
+      @page {
+        size: A4;
+        @frame content_frame {          /* Content Frame */
+          left: 0pt; width: 590pt; top: 0pt; height: 877pt;
+        }
+        background-image: url("{% static 'front/img/credential_front.png' %}");
+        }
+        
+    </style>
    
     <title>Sentir Humano</title>
-    <style type="text/css">
-      @page {size: a4 portrait; @frame header_frame {-pdf-frame-content: header_content; left: 50pt; width: 512pt; top: 50pt; height: 40pt;} @frame content_frame { left: 50pt; width: 512pt; top: 90pt; height: 632pt;} @frame footer_frame { -pdf-frame-content: footer_content; left: 50pt; width: 512pt; top: 772pt; height: 20pt;}}
-      
-      .test {
-        font-size: 13px;
-      }
-      .person_id{
-        text-align: right;
-        margin: 70px 50px 0px 205px;
-        padding-top: 45px;
-      }
-      .first_name{
-        margin: 70px 0px 20px 45px;
-      }
-      .creator{
-        margin: 0 0px 0px 45px;
-      }
-      .date{
-        margin: 20px 0px 0px 45px;
-      }
-      .afiliado{
-        font-size: 14;
-        margin-left: 45px;
-      }
-    </style>
+    
   </head>
   <body>
     
@@ -51,10 +36,11 @@
             <p class="creator">{{ customer.creator_by.username}}</p>
             <p class="date">{{customer.endsAt }}</p>
           </td>
-          <td style=" padding: 2px 0 0 0;">
+          <td style="padding: 2px 0 0 0;">
             <img src="{% static 'front/img/credential.png' %}" width="440" height="289"  alt="">
           </td>
        </thead>
+       <tbody></tbody>
   </table>
       </br></br></br>
       <div style="margin: 30px; background-color: rgb(253, 246, 235); padding: 10px;">
