--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -13,13 +13,7 @@
     
     <link rel="stylesheet" type="text/css" href="{% static 'front/css/credential.css' %}" />
     <style type="text/css"> 
-      @page {
-        size: A4;
-        @frame content_frame {          /* Content Frame */
-          left: 0pt; width: 590pt; top: 0pt; height: 877pt;
-        }
-        background-image: url("{% static 'front/img/credential_front.png' %}");
-        }
+      @page {background-image: url("{% static 'front/img/credential_front.png' %}");}
         
     </style>
    
@@ -40,7 +34,6 @@
             <img src="{% static 'front/img/credential.png' %}" width="440" height="289"  alt="">
           </td>
        </thead>
-       <tbody></tbody>
   </table>
       </br></br></br>
       <div style="margin: 30px; background-color: rgb(253, 246, 235); padding: 10px;">
