--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -13,6 +13,7 @@
     
     <link rel="stylesheet" type="text/css" href="{% static 'front/css/credential.css' %}" />
     <style type="text/css"> 
+      @page {background-image: url("{% static 'front/img/credential_front.png' %}");}
         
     </style>
    
@@ -29,13 +30,13 @@
             <p class="creator">{{ customer.creator_by.username}}</p>
             <p class="date">{{customer.endsAt }}</p>
           </td>
-          <td style="padding: 2px 0 0 0;">
+          <td>
             <img src="{% static 'front/img/credential.png' %}" width="440" height="289"  alt="">
           </td>
        </thead>
   </table>
       </br></br></br>
-      <div style="margin: 30px; background-color: rgb(253, 246, 235); padding: 10px;">
+      <div class="table_data">
         <h1 >Afliados</h1>
         <p class="adiliado">{{ customer.affiliate_one_customer.first_name|upper }} {{ customer.affiliate_one_customer.last_name|upper }}</p>
         <p class="adiliado">{{ customer.affiliate_two_customer.first_name|upper }} {{ customer.affiliate_two_customer.last_name|upper }}</p>
