--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -13,7 +13,13 @@
     
     <link rel="stylesheet" type="text/css" href="{% static 'front/css/credential.css' %}" />
     <style type="text/css"> 
-      @page {background-image: url("{% static 'front/img/credential_front.png' %}");}
+      @page {
+        size: A4;
+        @frame content_frame {          /* Content Frame */
+          left: 0pt; width: 590pt; top: 0pt; height: 877pt;
+        }
+        background-image: url("{% static 'front/img/credential_front.png' %}");
+      }
         
     </style>
    
