--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -10,19 +10,39 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="{% static 'front/css/banks.css' %}" />
     
-    <link rel="stylesheet" type="text/css" href="{% static 'front/css/credential.css' %}" />
-    <style type="text/css"> 
+
+    <style type="text/css">
       @page {
         size: A4;
         @frame content_frame {          /* Content Frame */
           left: 0pt; width: 590pt; top: 0pt; height: 877pt;
         }
         background-image: url("{% static 'front/img/credential_front.png' %}");
+        }
+      .test {
+        font-size: 13px;
       }
-        
+      .person_id{
+        text-align: right;
+        margin: 70px 50px 0px 205px;
+        padding-top: 45px;
+      }
+      .first_name{
+        margin: 70px 0px 20px 45px;
+      }
+      .creator{
+        margin: 0 0px 0px 45px;
+      }
+      .date{
+        margin: 20px 0px 0px 45px;
+      }
+      .afiliado{
+        font-size: 14;
+        margin-left: 45px;
+      }
     </style>
-   
     <title>Sentir Humano</title>
     
   </head>
@@ -42,7 +62,7 @@
        </thead>
   </table>
       </br></br></br>
-      <div class="table_data">
+      <div style="margin: 30px; background-color: rgb(253, 246, 235); padding: 10px;">
         <h1 >Afliados</h1>
         <p class="adiliado">{{ customer.affiliate_one_customer.first_name|upper }} {{ customer.affiliate_one_customer.last_name|upper }}</p>
         <p class="adiliado">{{ customer.affiliate_two_customer.first_name|upper }} {{ customer.affiliate_two_customer.last_name|upper }}</p>
