--- a/templates/admin/credential.html
+++ b/templates/admin/credential.html
@@ -19,7 +19,7 @@
         @frame content_frame {          /* Content Frame */
           left: 0pt; width: 590pt; top: 0pt; height: 877pt;
         }
-        background-image: url("{% static 'front/img/credential_front.png' %}");
+        background-image: url("{{request.META.HTTP_HOST}}{% static 'front/img/credential_front.png' %}");
         }
       .test {
         font-size: 13px;
@@ -57,7 +57,7 @@
             <p class="date">{{customer.endsAt }}</p>
           </td>
           <td>
-            <img src="{% static 'front/img/credential.png' %}" width="440" height="289"  alt="">
+            <img src="{{request.META.HTTP_HOST}}{% static 'front/img/credential.png' %}" width="440" height="289"  alt="">
           </td>
        </thead>
   </table>
