--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,14 @@
           <li class="nav-item active">
             <a class="nav-link" href="/admin">Admin <span class="sr-only">(current)</span></a>
           </li>
+          &nbsp;
+          <li class="nav-item active">
+            <a href="https://api.whatsapp.com/send?phone=+573178935849&text=Quiero%20una%20cita%20con%20{{ supli.specialty }} - %20{{supli.first_name}}%20{{supli.phone}}" class="btn d-block w-100 d-sm-inline-block btn-outline-success">Whatsapp</a>
+          </li>
+          &nbsp;&nbsp;&nbsp;
+          <li class="nav-item active">
+            <a href="tel:+573178935849" class="btn d-block w-100 d-sm-inline-block btn-outline-info">Llamanos</a>
+          </li>
         </ul>
       </div>
     </nav>
